--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
   <header>
     <h1>Austin Kinnear's Blog</h1>
     <nav>
-      <a href="home-page.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="portfolio.html">Portfolio</a>
       <a href="blog.html">Blog</a>
     </nav>
