--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav>
-      <a href="home-page.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="portfolio.html">Portfolio</a>
       <a href="blog.html">Blog</a>
     </nav>
